--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,7 +25,7 @@
 
           <%}else{%>
             <a href="#" class="nav-link active text-capitalize">Hello <%=currentUser.username%></a>
-            <a href="#" class="nav-link active"><i class="fas fa-shopping-cart"></i>
+            <a href="/user/<%=currentUser._id%>/cart" class="nav-link active"><i class="fas fa-shopping-cart"></i>
               <sup><span class="badge bg-danger">2</span></sup>
             </a>
             <a href="/logout" class="nav-link active">Logout</a>
