--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -1,36 +1,45 @@
-<%- include("../partials/header")-%>
-    <%- include("../partials/navbar")-%>
+<%- include("../partials/header")%>
+    <%- include("../partials/navbar")%>
 
 
-        <main class="container">
+        <main class="container" style="margin-top: 1rem;">
 
-            <%- include("../partials/flash")-%>
-                <section>
-                    <h4 class="display-4">Shopping-Cart</h4>
+            <%- include("../partials/flash")%>
+
+
+                <section id="heading">
+
+                    <h4 class="display-4"><i class="fab fa-shopify" style="margin-right: 20px;"></i>Shopping-Cart</h4>
+
                 </section>
 
                 <div class="row products">
+
                     <%for(let product of products){%>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <div class="card text-center m-3" style="width: 18rem;">
-                                <img src="<%=product.img%>" class="card-img-top" alt="...">
+                        <div class="col-lg-3 col-md-6 col-sm-6">
+                            <div class="card">
+                                <img src="<%= product.img %>" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">
-                                        <%=product.name%>
+                                        <%= product.name %>
                                     </h5>
                                     <p class="card-text">
-                                        <%=product.desc.substring(0,70)%>
+                                        <%= product.desc.substring(0,70) %>
                                     </p>
-                                    <a href="/products/<%=product._id%>" class="btn btn-outline-primary">More Info</a>
+                                    <a href="/products/<%= product._id %>" class="btn btn-outline-primary">View
+                                        Product</a>
                                 </div>
                             </div>
                         </div>
-                        <% }%>
-                </div>
-
-
+                        <%}%>
 
                 </div>
 
 
-                <%- include("../partials/footer")-%>
+
+
+                </div>
+        </main>
+
+
+        <%- include("../partials/footer")%>
