--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,7 +26,9 @@
           <%}else{%>
             <a href="#" class="nav-link active text-capitalize">Hello <%=currentUser.username%></a>
             <a href="/user/<%=currentUser._id%>/cart" class="nav-link active"><i class="fas fa-shopping-cart"></i>
-              <sup><span class="badge bg-danger">2</span></sup>
+              <sup><span class="badge bg-danger">
+                  <%=currentUser.cart.length%>
+                </span></sup>
             </a>
             <a href="/logout" class="nav-link active">Logout</a>
             <%}%>
